# ContextCore

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
contextcore/: __init__.py
contextcore/agent/: planner.py  router.py  synthesiser.py
contextcore/api/: main.py
contextcore/api/routers/: health.py  ingest.py  query.py
contextcore/api/static/: index.html
contextcore/config/: __init__.py  settings.py
contextcore/ingestion/: chunker.py  cli.py  embedder.py  indexer.py  loader.py
contextcore/memory/: session_store.py
contextcore/rag/: pipeline.py  retriever.py
sample_docs/: company_overview.md  engineering_handbook.md  product_lineup.md  support_policy.md
tests/integration/: test_api_health.py
tests/unit/: test_chunker.py  test_planner.py
