[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "contextcore"
version = "0.1.0"
description = "Adaptive enterprise RAG with multi-hop reasoning, session memory and agentic routing."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.28",
    "openai>=1.30",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langgraph>=0.1",
    "llama-index>=0.10",
    "qdrant-client>=1.9",
    "redis>=5.0",
    "unstructured[pdf,docx]>=0.14",
    "sentence-transformers>=3.0",
    "tiktoken>=0.7",
    "boto3>=1.34",
    "mlflow>=2.13",
    "langsmith>=0.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
